# dark-swan

./: .gitignore  CHEATSHEET.md  LICENSE  README.md  ds_cli.py  ds_gdk9.py  ds_proof.py  ds_protocol_core.py  ds_registry.py  pyproject.toml
.github/workflows/: ci.yml
docs/: philosophy.md  protocol_design.md  roadmap.md
examples/: generate_identity.py  registry_workflow.py  sign_and_verify.py
tests/: test_ds_cli.py  test_ds_gdk9.py  test_ds_keyfile.py  test_ds_proof.py  test_ds_protocol_core.py  test_ds_registry.py
